# Xiao-Lai-White-box-SM4

./: CMakeLists.txt  README.md
include/: sbox.h  wbsm4.h
include/WBMatrix/: WBMatrix.h  inverse.h  random.h  structure.h
src/: wbsm4.c  wbsm4_gen.c
src/WBMatrix/: WBMatrix.c  random.c
test/: main.c
